tests/bigint/invalid10.js
const invalid_neg_e = -2e9n; // error
